--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spring": "^9.7.2",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.4.1",
